Added box plot for final tumor volume for 4 regimens of interest

--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -3285,15 +3285,15 @@
     }
    ],
    "source": [
-    "second = clean_data_df[[\"Mouse ID\", \"Timepoint\"]].groupby(\"Mouse ID\").max()\n",
-    "second = pd.DataFrame(second)\n",
-    "final_tp = pd.merge(clean_data_df, second, how=\"inner\", on=[\"Mouse ID\",\"Timepoint\"])\n",
-    "final_tp"
+    "#second = clean_data_df[[\"Mouse ID\", \"Timepoint\"]].groupby(\"Mouse ID\").max()\n",
+    "#second = pd.DataFrame(second)\n",
+    "#final_tp = pd.merge(clean_data_df, second, how=\"inner\", on=[\"Mouse ID\",\"Timepoint\"])\n",
+    "#final_tp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3306,35 +3306,6 @@
       "Name: Tumor Volume (mm3), dtype: float64\n",
       "Ceftamin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[array([38.98287774, 38.75326548, 32.37735684, 23.34359787, 38.93963263,\n",
-       "        28.48403281, 41.48300765, 40.72857787, 46.53920617, 31.02392294,\n",
-       "        38.1251644 , 40.65812366, 36.04104736, 37.31184577, 41.58152074,\n",
-       "        31.8962384 , 40.1592203 , 37.07402422, 38.84687569, 39.95234669,\n",
-       "        34.45529799, 47.68596303, 33.32909778, 30.48598484, 28.43096411]),\n",
-       " array([38.34200823, 36.56165229, 31.56046955, 38.4076183 , 43.0475426 ,\n",
-       "        37.31123552, 36.13485243, 44.18345092, 22.05012627, 33.39765251,\n",
-       "        37.22565033, 32.97852192, 33.56240217, 29.12847181, 38.81036633,\n",
-       "        40.66771292, 30.56462509, 43.16637266, 31.09533505, 30.27623175,\n",
-       "        40.65900627, 30.63869575, 43.41938077, 45.22086888, 36.37451039]),\n",
-       " array([36.3213458 , 72.2267309 , 46.25011212, 57.03186187, 67.68556862,\n",
-       "        66.19691151, 62.11727887, 55.62942846, 62.75445141, 65.52574285,\n",
-       "        67.28962147, 54.65654872, 54.04860769, 60.96971133, 67.97341878,\n",
-       "        66.08306589, 45.69933088, 47.01036401, 60.16518046, 55.65068132,\n",
-       "        51.54243058, 50.00513807, 62.43540402, 58.26844248, 60.91876652]),\n",
-       " array([61.38666032, 46.78453491, 64.29983003, 48.72207785, 57.91838132,\n",
-       "        55.74282869, 67.74866174, 64.72983655, 68.59474498, 59.85195552,\n",
-       "        61.84902336, 52.92534846, 45.        , 67.52748237, 47.7846818 ,\n",
-       "        45.        , 68.92318457, 62.99935619, 64.63494887, 45.        ,\n",
-       "        61.43389223, 56.05774909, 59.74190064, 64.19234114, 45.        ])]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3348,7 +3319,11 @@
     "    #final_tumor_vol = sorted_last_size.loc[sorted_last_size[\"Drug Regimen\"] == drug, 'Tumor Volume (mm3)']\n",
     "    \n",
     "    #tumor_vol_list.append(final_tumor_vol)\n",
-    "\n",
+    "    second = clean_data_df[[\"Mouse ID\", \"Timepoint\"]].groupby(\"Mouse ID\").max()\n",
+    "    second = pd.DataFrame(second)\n",
+    "    final_tp = pd.merge(clean_data_df, second, how=\"inner\", on=[\"Mouse ID\",\"Timepoint\"])\n",
+    "    final_tp\n",
+    "    \n",
     "    tp_perdrug = final_tp[final_tp['Drug Regimen'] == drug]\n",
     "\n",
     "    drug_tumvol = tp_perdrug['Tumor Volume (mm3)']\n",
@@ -3364,14 +3339,12 @@
     "    #print(LB, UB)\n",
     "    \n",
     "    outliers = drug_tumvol.loc[(drug_tumvol < LB) | (drug_tumvol > UB)]\n",
-    "    print(f\"{drug}'s potential outliers: {outliers}\")\n",
-    "\n",
-    "fin_tumvol"
+    "    print(f\"{drug}'s potential outliers: {outliers}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3393,6 +3366,10 @@
     "ax1.set_title('Drug Regimens')\n",
     "ax1.set_ylabel('Tumor Volumen (mm3)')\n",
     "ax1.boxplot(fin_tumvol)\n",
+    "\n",
+    "#plt.xticks([1, 2, 3, 4],\n",
+    "           #[\"10\", \"20\", \"30\", \"40\"])\n",
+    "\n",
     "plt.show()"
    ]
   },
