Shortened lines for med and var... see last commit

--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -734,74 +734,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Drug Regimen\n",
-       "Capomulin    40.675741\n",
-       "Ceftamin     52.591172\n",
-       "Infubinol    52.884795\n",
-       "Ketapril     55.235638\n",
-       "Naftisol     54.331565\n",
-       "Placebo      54.033581\n",
-       "Propriva     52.320930\n",
-       "Ramicane     40.216745\n",
-       "Stelasyn     54.233149\n",
-       "Zoniferol    53.236507\n",
-       "Name: Tumor Volume (mm3), dtype: float64"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "regimean = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').mean())['Tumor Volume (mm3)']\n",
-    "\n",
-    "regimedian = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').median())['Tumor Volume (mm3)']"
+    "regimed = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').median())['Tumor Volume (mm3)']\n",
+    "regimed = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').median())['Tumor Volume (mm3)']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 204,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Drug Regimen\n",
-       "Capomulin    41.557809\n",
-       "Ceftamin     51.776157\n",
-       "Infubinol    51.820584\n",
-       "Ketapril     53.698743\n",
-       "Naftisol     52.509285\n",
-       "Placebo      52.288934\n",
-       "Propriva     50.446266\n",
-       "Ramicane     40.673236\n",
-       "Stelasyn     52.431737\n",
-       "Zoniferol    51.818479\n",
-       "Name: Tumor Volume (mm3), dtype: float64"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "regi_median = clean_data_df.groupby('Drug Regimen').median()\n",
-    "regimedian = regi_median['Tumor Volume (mm3)']\n",
-    "regimedian"
+    "#regi_median = clean_data_df.groupby('Drug Regimen').median()\n",
+    "#regimedian = regi_median['Tumor Volume (mm3)']\n",
+    "#regimedian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +777,7 @@
        "Name: Tumor Volume (mm3), dtype: float64"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +810,7 @@
        "Name: Tumor Volume (mm3), dtype: float64"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +843,7 @@
        "Name: Tumor Volume (mm3), dtype: float64"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1008,7 @@
        "Zoniferol                            6.966589          0.516398  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1017,7 @@
     "# Assemble the resulting series into a single summary dataframe.\n",
     "describe_summary_df = pd.DataFrame({\n",
     "    'Tumor Volume Mean': regimean,\n",
-    "    'Tumor Volume Median': regimedian,\n",
+    "    'Tumor Volume Median': regimed,\n",
     "    'Tumor Volume Variance': regivar,\n",
     "    'Tumor Volume Standard Deviation': regisd,\n",
     "    'Tumor Volume SEM': regisem\n",
