--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -734,19 +734,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "regimean = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').mean())['Tumor Volume (mm3)']\n",
     "regimed = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').median())['Tumor Volume (mm3)']\n",
-    "regimed = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').median())['Tumor Volume (mm3)']"
+    "regivar = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').var())['Tumor Volume (mm3)']\n",
+    "regisd = (clean_data_df[['Drug Regimen','Tumor Volume (mm3)']].groupby('Drug Regimen').std())['Tumor Volume (mm3)']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +778,7 @@
        "Name: Tumor Volume (mm3), dtype: float64"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +811,7 @@
        "Name: Tumor Volume (mm3), dtype: float64"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +844,7 @@
        "Name: Tumor Volume (mm3), dtype: float64"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1009,7 @@
        "Zoniferol                            6.966589          0.516398  "
       ]
      },
-     "execution_count": 208,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
